--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
               
         </section>
         <section class="mid">
+            <div class="mid-p">
+                <p class="mid-paragraph">NEW BEST OFFER </p>
+                <h2 class="mid-tittle"> Coming Soon</h2>
+                <p id="mid-paragraph"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="mid-t">
+                <h2 id="mid-tittle"> 2024</h2>
+                <p class="ph"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="/image/Group 96.png" alt="">
+            </div>
 
         </section>
            
