--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
             </div>
 
         </section>
+        <section class="end">
+            <div class="end-t">
+                <h4 id="ness"> WHAT IS FUNCTIONAL</h4>
+                <h1 class="redd"> <span class="green"> Holidays </span> <span class="greenn">Sale 50%</span>  </h1>
+                <p id="end"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            </div>
+
+        </section>
            
 
 
