--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                 <h1 class="th"> @all right reserved</h1>
                 <p id="th"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
                     Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <!--  newslatter roiche -->
+                 <div class="input">
+                    <label for="name"> 
+                        <input id="name" placeholder="user@gmail.com">
+                    </label>
+                    <button class="ton"> Subscribe</button>
+                 </div>
             </div>
         </section>
 
