--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </section>
         <section id="background">
             <h1 class="back-tittle"><span class="color">Place</span> : New Park Hotel<br>
-                <span class="color"> Date: 31 December Night 2023</span><br>
-                <span class="color"> Time: Evening 7.30 pm to 12.30 am </span>,<br><button class="buttonn"> JOIN
+               <span class="color"> Date:</span> 31 December Night 2023 <br> 
+               <span class="color"> Time:</span> Evening 7.30 pm to 12.30 am <br><button class="buttonn"> JOIN
                     NOW</button>
             </h1>
 
