--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </Section>
         <section class="midnight">
             <div>
-                <h1 class="midnight-tittle"> Welcome to<br> midnight party</h1>
-                <p class="midnight-paragraph"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. <br> <button> Join Now
+                <h1 class="midnight-tittle"> Welcome to the  midnight party</h1> <br> <p class="midnight-paragraph">Welcome to the enchanting midnight party, where laughter dances with moonlight, and joy echoes in the embrace of night's magic. <br><button> Join Now
 
                     </button> </p>
 
@@ -58,12 +56,11 @@
             <div class="mid-p">
                 <p class="mid-paragraph">NEW BEST OFFER </p>
                 <h2 class="mid-tittle"> Coming Soon</h2>
-                <p id="mid-paragraph"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p id="mid-paragraph">Anticipation mounts, whispers of excitement flutter in the air. Coming soon: a spectacle of joy, a tapestry woven with dreams. The countdown begins for an event of unforgettable allure </p>
             </div>
             <div class="mid-t">
                 <h2 id="mid-tittle"> 2024</h2>
-                <p class="ph"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p class="ph"> Night descends, music plays, laughter echoes—a magical midnight celebration unfolds.</p>
                 <img src="/image/Group 96.png" alt="">
             </div>
 
@@ -72,9 +69,7 @@
             <div class="end-t">
                 <h4 id="ness"> WHAT IS FUNCTIONAL</h4>
                 <h1 class="redd"> <span class="green"> Holidays </span> <span class="greenn">Sale 50%</span> </h1>
-                <p id="end"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
-                    fermentum amet amet sit consectetur.</p>
+                <p id="end"> Embrace the festive cheer! Holiday sell extravaganza, with a generous 50% off, invites you to unwrap joy and indulge in the season's spirit. Don't miss this incredible opportunity!</p>
             </div>
             <div class="flex">
 
@@ -94,8 +89,7 @@
         <section>
             <p class="well">OUR BEST GIFTS </p>
             <h1 id="wee"> Our Awesome Portfolio</h1>
-            <p id="well"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
-                sed sodales risus ut pellentesque vel euismod. </p>
+            <p id="well">"Our portfolio exemplifies excellence, a curated collection of achievements, showcasing innovation, expertise, and impactful results.  </p>
             <div class=" ness">
                 <img src="/image/Rectangle 3.png" alt="">
                 <img src="/image/Rectangle 4.png" alt="">
@@ -112,9 +106,8 @@
                 <img src="/image/Group 61.png">
             </div>
             <div id="mate">
-                <h1 class="th"> @all right reserved</h1>
-                <p id="th"> Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
-                    Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h1 class="th"> Subscribe Newsletter</h1>
+                <p id="th">  I'll make sure to subscribe you to the newsletter. You'll receive all the latest updates and news right in your inbox. 📩🎉 </p>
                  <div class="input">
                     <label for="name"> 
                         <input id="name" placeholder="user@gmail.com">
