--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
         <section class="end">
             <div class="end-t">
-                <h4 id="ness"> WHAT IS FUNCTIONAL</h4>
+                <h4 id="inte"><h1>WHAT IS FUNCTIONA</h1> </h4>
                 <h1 class="redd"> <span class="green"> Holidays </span> <span class="greenn">Sale 50%</span> </h1>
                 <p id="end"> Embrace the festive cheer! Holiday sell extravaganza, with a generous 50% off, invites you to unwrap joy and indulge in the season's spirit. Don't miss this incredible opportunity!</p>
             </div>
@@ -78,6 +78,8 @@
                 </div>
                 <div id="fresh">
                     <img src="/image/Rectangle 1.png" alt="">
+                    <div class="walton"><img src="/image/Group 44.png" alt=""></div>
+                    
                 </div>
 
             </div>
